SERVER-58183 Ensure that we ignore prepare conflicts when applying prepare transaction oplog entries

(cherry picked from commit ea2ea50017f76adf68ca3cb385546774a251c42e)
(cherry picked from commit 5e553f1e34dddb6242b936c0f1e00a8294a39747)
(cherry picked from commit ec3acbdb7580d99f524f2893abe153d6aae62e75)